 - Fix some wrapping issues on Korean systems
 - Fix Romanian not being detected
 - Add French (Canada) translation
 - Add Italian translation
 - Add Portuguese translation
 - Add Korean translation
 - Add Greek translation
 - Add searching using a title id
 - Add searching using a legacy search query
 - Add toggles in settings menu to replace value true/false

v1.1.0 "aeraria":
 - fix issue where NAND titles wouldn't be reinstallable
 - add Romanian translation
 - add French translation

v1.0.1 "aeraria":
 - additionally to initial release:
 - hotfix arm11 after title installation

v1.0.0 "aeraria":
 - update for new hsite v3 api
 - re-add light theme & make it the default
 - add log spliting: logs get split into multiple files sorted on age
 - add a download speed and ETA field while installing titles
 - add random title button
 - add log uploading
 - improve utf8 handling
 - remove find_missing prompt in favor of automatic adding
 - fix issue where categories weren't sorted as on website
 - fix issue where closing the app from home would freeze the system
 - fix issue where spamming toggle on a "true"/"false" setting would crash the system
 - fix issue where cursor wouldn't appear if second to last title was removed in queue
 - fix issue where find_missing never did anything
 - fix issue where seed was never installed
 - fix issue where free space indicator wasn't being updated after installing a title

v0.2.1:
 - fixed net indicator going partly hidden when in a long list
 - add clarification after clicking on find missing
 - fix bug where clearing logs would crash 3hs
 - fix bug where selecting games will prompt to install the base game

v0.2.0:
 - implemented resuming downloads
 - fix easter egg not working
 - fix bug where single line panic message wouldn't show
 - add find missing dlc/updates feature
 - add translations
 - add proxy support
 - add sprites for battery
 - add a loading animation
 - major speed improvements
 - add luma locale emulator support