@@ -21,6 +21,7 @@
 
 #include "extmeta.hh"
 #include "thread.hh"
+#include "queue.hh"
 #include "panic.hh"
 #include "i18n.hh"
 #include "util.hh"
@@ -149,6 +150,12 @@ static extmeta_return extmeta(ui::RenderQueue& queue, const hsapi::Title& base, 
 
 	ui::builder<ui::ButtonCallback>(ui::Screen::top, KEY_A)
 		.connect(ui::ButtonCallback::kdown, [&ret](u32) -> bool { ret = extmeta_return::yes; return false; })
+		.add_to(queue);
+
+	ui::builder<ui::ButtonCallback>(ui::Screen::top, KEY_Y)
+		.connect(ui::ButtonCallback::kdown, [&base](u32) -> bool { ui::RenderQueue::global()->render_and_then([&base]() -> void {
+				queue_add(base.id, true);
+			}); return true; })
 		.add_to(queue);
 
 	queue.render_finite();
